removing size props bugged on safari

--- a/src/components/NumericInputField/style.scss
+++ b/src/components/NumericInputField/style.scss
@@ -114,10 +114,6 @@ $base-class: 'numeric-input';
     }
   }
 
-  &--with-max {
-    max-width: none;
-  }
-
   &--disabled {
     cursor: not-allowed;
     color: $font-primary-color;
